fix nav padding on mobile

--- a/src/_scss/_nav.scss
+++ b/src/_scss/_nav.scss
@@ -47,4 +47,11 @@ nav {
 }
 
 @media screen and (max-width: $mobile) {
+  nav {
+    padding: $flow1;
+
+    #logo {
+      width: 4.5em;
+    }
+  }
 }
